--- a/ProyectoFinal-Restaurante/ProyectoFinal.csproj
+++ b/ProyectoFinal-Restaurante/ProyectoFinal.csproj
@@ -70,17 +70,29 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\Registro\RegistroArticulos.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UI\Registro\RegistroArticulos.Designer.cs">
-      <DependentUpon>RegistroArticulos.cs</DependentUpon>
-    </Compile>
     <Compile Include="UI\Registro\RegistroCliente.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\Registro\RegistroCliente.Designer.cs">
       <DependentUpon>RegistroCliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Registro\RegistroProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Registro\RegistroProducto.Designer.cs">
+      <DependentUpon>RegistroProducto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Registro\RegistroUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Registro\RegistroUsuario.Designer.cs">
+      <DependentUpon>RegistroUsuario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Registro\RegistroVentas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Registro\RegistroVentas.Designer.cs">
+      <DependentUpon>RegistroVentas.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -94,11 +106,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="UI\Registro\RegistroArticulos.resx">
-      <DependentUpon>RegistroArticulos.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="UI\Registro\RegistroCliente.resx">
       <DependentUpon>RegistroCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Registro\RegistroProducto.resx">
+      <DependentUpon>RegistroProducto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Registro\RegistroUsuario.resx">
+      <DependentUpon>RegistroUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Registro\RegistroVentas.resx">
+      <DependentUpon>RegistroVentas.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
