--- a/ProyectoFinal-Restaurante/App.config
+++ b/ProyectoFinal-Restaurante/App.config
@@ -5,8 +5,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ConStr"
-      connectionString="Data Source=LUISOPC;Initial Catalog=ProyectoFinal;Integrated Security=True"
+    <add name="ConStr" connectionString="Data Source=LUISOPC;Initial Catalog=ProyectoFinal;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="ProyectoFinal_Restaurante.Properties.Settings.ConStr"
+      connectionString="Data Source=LUISOPC;Initial Catalog=ProyectoFinalDb;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
