--- a/ProyectoFinal-Restaurante/ProyectoFinal_Restaurante.csproj
+++ b/ProyectoFinal-Restaurante/ProyectoFinal_Restaurante.csproj
@@ -84,11 +84,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProyectoFinalDbDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ProyectoFinalDbDataSet.xsd</DependentUpon>
-    </Compile>
     <Compile Include="Reportes\ClienteCrystalReport.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -101,11 +96,29 @@
     <Compile Include="Reportes\ClienteReview.Designer.cs">
       <DependentUpon>ClienteReview.cs</DependentUpon>
     </Compile>
-    <Compile Include="Reportes\ReporteDeFacturaCrystalReport.cs">
+    <Compile Include="Reportes\DetalleCrystalReport.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ReporteDeFacturaCrystalReport.rpt</DependentUpon>
+      <DependentUpon>DetalleCrystalReport.rpt</DependentUpon>
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\DetalleReporte.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportes\DetalleReporte.Designer.cs">
+      <DependentUpon>DetalleReporte.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\ReporteDeFactura.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ReporteDeFactura.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\ReporteDeFacturas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportes\ReporteDeFacturas.Designer.cs">
+      <DependentUpon>ReporteDeFacturas.cs</DependentUpon>
     </Compile>
     <Compile Include="Reportes\UsuarioCrystalReportr.cs">
       <AutoGen>True</AutoGen>
@@ -196,9 +209,19 @@
     <EmbeddedResource Include="Reportes\ClienteReview.resx">
       <DependentUpon>ClienteReview.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Reportes\ReporteDeFacturaCrystalReport.rpt">
+    <EmbeddedResource Include="Reportes\DetalleCrystalReport.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>ReporteDeFacturaCrystalReport.cs</LastGenOutput>
+      <LastGenOutput>DetalleCrystalReport.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\DetalleReporte.resx">
+      <DependentUpon>DetalleReporte.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\ReporteDeFactura.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>ReporteDeFactura.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\ReporteDeFacturas.resx">
+      <DependentUpon>ReporteDeFacturas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\UsuarioCrystalReportr.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
@@ -250,17 +273,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ProyectoFinalDbDataSet.xsc">
-      <DependentUpon>ProyectoFinalDbDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="ProyectoFinalDbDataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>ProyectoFinalDbDataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="ProyectoFinalDbDataSet.xss">
-      <DependentUpon>ProyectoFinalDbDataSet.xsd</DependentUpon>
-    </None>
     <None Include="Resources\iconfinder_Print_1493286.png" />
   </ItemGroup>
   <ItemGroup>
